--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,5 @@
 @import "../sass/blocks/about.scss";
 @import "../sass/blocks/contacts.scss";
 @import "../sass/blocks/main-footer.scss";
+@import "../sass/blocks/catalog-header.scss";
+@import "../sass/blocks/catalog.scss";
