Зкончил form.html

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,5 @@
 @import "../sass/blocks/main-footer.scss";
 @import "../sass/blocks/catalog-header.scss";
 @import "../sass/blocks/catalog.scss";
+@import "../sass/blocks/form-header.scss";
+@import "../sass/blocks/form.scss";
