--- a/source/sass/common/common.scss
+++ b/source/sass/common/common.scss
@@ -2,3 +2,37 @@ body {
   background-color: $main-color;
   font-family: 'Open Sans', sans-serif;
 }
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+input[type="input"],
+input[type="tel"],
+input[type="email"],
+input[type="password"] {
+    height: 38px;
+    box-sizing: border-box;
+    color: #999999;
+    border: none;
+    border-bottom: 2px solid #000000;
+    //border-radius: 5px;
+    vertical-align: middle;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    font-size: 17px;
+    line-height: 18;
+    font-weight: normal;
+    display: block;
+    width: 100%;
+}
+textarea {
+  resize: none;
+  height: 140px;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 2px solid #000000;
+  width: 100%;
+}
