--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,58 +1,55 @@
 .contacts {
   padding: 0 30px;
-  .contacts__title {
-    font-size: 25px;
-    line-height: 30px;
-    font-weight: bold;
-    margin: 0;
-    margin-top: 30px;
-  }
-  .contacts__table {
-    width: 100%;
-  }
-  .contacts__col {
-    vertical-align: top;
-  }
-  .contacts__col:nth-child(1) {
-    width: 50px;
-  }
-  .contacts__col:nth-child(2) {
-   padding-left: 25px;
-  }
-  .contacts__email,
-  .contacts__address,
-  .contacts__col-p
-   {
-    margin: 0;
-    font-size: 15px;
-    line-height: 30px;
-    color: #444444;
-    font-weight: 500;
-    letter-spacing: -1px;
-  }
-  .contacts__email-link {
-    color: inherit;
-    font-size: 15px;
-  }
+}
+.contacts__title {
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: bold;
+  margin: 0;
+  margin-top: 30px;
+}
+.contacts__table {
+  width: 100%;
+}
+.contacts__col {
+  vertical-align: top;
+}
+.contacts__email-wrapper {
+ padding-left: 25px;
+}
+.contacts__email,
+.contacts__address,
+.contacts__email-wrapper
+ {
+  margin: 0;
+  font-size: 15px;
+  line-height: 30px;
+  color: #444444;
+  font-weight: 500;
+  letter-spacing: -1px;
+}
+.contacts__email-link {
+  color: inherit;
+  font-size: 15px;
 }
 .map {
-    margin-top: 40px;
-    text-align: center;
+  margin-top: 40px;
+  text-align: center;
 }
 .write-us__wrapper {
   padding: 0 30px;
-  .write-us {
-    margin-top: 30px;
-    font-size: 17px;
-    line-height: 20px;
-    font-weight: bold;
-    color: #444444;
-    display: inline-block;
-    text-decoration: none;
-    text-transform: uppercase;
-    border: 2px solid #444444;
-    width: 100%;
-    text-align: center;
-    padding: 14px 0;
-  }
+}
+.write-us {
+  margin-top: 30px;
+  font-size: 17px;
+  line-height: 20px;
+  font-weight: bold;
+  color: #444444;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  border: 2px solid #444444;
+  width: 100%;
+  text-align: center;
+  padding: 14px 0;
 }
