--- a/source/sass/common/fonts.scss
+++ b/source/sass/common/fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   src: url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic");
 }
