--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -24,8 +24,7 @@
 
 .contacts__email,
 .contacts__address,
-.contacts__email-wrapper
-{
+.contacts__email-wrapper {
   margin: 0;
   font-size: 15px;
   line-height: 30px;
