--- a/source/sass/common/common.scss
+++ b/source/sass/common/common.scss
@@ -1,7 +1,8 @@
 body {
   background-color: $main-color;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
+
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
