--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -69,3 +69,60 @@
   text-align: center;
   padding: 14px 0;
 }
+
+@media (min-width: 768px) {
+  .featured--top {
+    margin-top: 35px;
+    padding: 0 50px;
+    padding-bottom: 40px;
+    border-bottom: 2px solid #f1f1f1;
+    position: relative;
+  }
+
+  .featured__title--size {
+    margin: 0;
+    padding-right: 50px;
+    font-size: 43px;
+    line-height: 50px;
+    letter-spacing: -1.5px;
+    box-sizing: border-box;
+
+  }
+
+  .featured__span--right {
+    display: inline-block;
+    width: 70px;
+    margin-left: 105px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  .featured__text--size {
+    width: 230px;
+  }
+
+  .featured__table--size {
+    width: 300px;
+    //float: left;
+  }
+
+  .featured__basket-image {
+    position: absolute;
+    width: 333px;
+    height: 404px;
+    margin: 0;
+    top: 80px;
+    right: 50px;
+  }
+
+  .featured__price--size {
+    width: 300px;
+    font-size: 20px;
+    margin: 40px 0;
+  }
+
+  .featured__to-order--size {
+    width: 300px;
+    margin-top: 20px;
+  }
+}
