--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,8 +1,8 @@
 .main-header {
+  background-color: #fafafa;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: -140px 0;
-  min-height: 490px;
+  background-position: 50% 0;
 }
 
 .main-header__title {
@@ -50,5 +50,24 @@
   box-sizing: border-box;
   padding: 28px 0;
   padding-left: 30px;
-  padding-right: 120px;
+  padding-right: 130px;
+}
+
+@media (min-width: 768px) {
+  .main-header {
+    background-position: 95px -30px;
+    padding: 0 50px;
+  }
+
+  .main-header--span-inline {
+    display: inline-block;
+  }
+  .main-header__list {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+  }
+  .main-header__item {
+    width: 333px;
+  }
 }
