--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -1,2 +1,8 @@
 $main-color: #ffffff;
 $main-width: 320px;
+
+$map-width-s: 320px;
+$map-height-s: 460px;
+
+$mapwidthm: 768px;
+$mapheightm: 460px;
