--- a/source/sass/blocks/catalog-header.scss
+++ b/source/sass/blocks/catalog-header.scss
@@ -7,3 +7,11 @@
   line-height: 30px;
   font-weight: bold;
 }
+
+@media (min-width: 768px) {
+  .catalog-header__title {
+    font-size: 43px;
+    line-height: 50px;
+    padding: 50px 0;
+  }
+}
