--- a/source/sass/blocks/site-wrapper.scss
+++ b/source/sass/blocks/site-wrapper.scss
@@ -2,6 +2,7 @@
   background-color: $main-color;
   width: $main-width;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 @media (min-width: 768px) {
   .site-wrapper {
