--- a/source/sass/blocks/top-menu.scss
+++ b/source/sass/blocks/top-menu.scss
@@ -1,16 +1,11 @@
 .top-menu__list {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0 30px;
 }
 
 .top-menu__item {
-  padding-left: 60px;
-  border-bottom: 1px solid #ececec;
-  display: inline-block;
-  vertical-align: baseline;
-  position: relative;
-  width: 100%;
+  vertical-align: bottom;
   box-sizing: border-box;
 }
 
@@ -22,103 +17,54 @@
   color: #000000;
   font-weight: bold;
   padding: 28px 20px;
-  vertical-align: middle;
-}
-
-.top-menu__img-wrapper {
-  line-height: 24px;
-  display: inline-block;
-  vertical-align: middle;
-  position: absolute;
-  left: 30px;
-  top: 30px;
-}
-
-.top-menu__svg {
-  width: 18px;
-  height: 18px;
-}
-
-.top-menu--delivery {
-  display: none;
+  padding-left: 60px;
+  vertical-align: baseline;
+  box-sizing: border-box;
+  width: 100%;
+  position: relative;
+  border-bottom: 1px solid #ececec;
 }
 
 @media (min-width: 768px) {
   .top-menu__toggle-menu {
     display: none;
   }
+
   .top-menu__list {
+    padding: 0 50px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
+
+  .top-menu--font {
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: normal;
+  }
+
+  .top-menu--display-none {
+    display: none;
+  }
+
   .top-menu__link {
     padding: 20px;
   }
 
-  .top-menu--logo {
+  .top-menu--order {
     order: -3;
-    width: 370px;
-    padding-left: 50px;
-
-    .top-menu__link {
-      padding: 22px 0;
-      width: 100%;
-    }
   }
 
   .top-menu--find {
     order: -2;
-    width: 80px;
-    padding-left: 0;
-    border-left: 1px solid #ececec;
-    border-right: 1px solid #ececec;
-
-    .top-menu__link {
-      display: none;
-    }
   }
 
   .top-menu--basket {
     order: -1;
-    width: 315px;
-    box-sizing: border-box;
-    padding-right: 50px;
-
-    .top-menu__link {
-      padding: 27px 0;
-      width: 100%;
-      text-align: right;
-    }
   }
-  .top-menu--catalog,
-  .top-menu--knitting {
-    width: 180px;
-    padding-left: 0;
-    border: none;
-    background-color: #fafafa;
 
-    .top-menu__link {
-      font-size: 15px;
-    }
-  }
-  .top-menu--delivery {
-    width: 405px;
+  .top-menu--display-block {
     display: block;
-    box-sizing: border-box;
-    padding-left: 0;
-    padding-right: 50px;
-    border: none;
-    background-color: #fafafa;
-
-    .top-menu__link {
-      padding-right: 50px;
-      box-sizing: border-box;
-      font-size: 15px;
-      font-weight: normal;
-      padding-right: 0;
-      width: 100%;
-      text-align: right;
-    }
   }
 }
