--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -199,5 +199,21 @@
   .about__next-button {
     padding: 10px 20px;
   }
+}
+
+@media (min-width: 1200px) {
+  .about {
+    padding: 0 100px;
+    background-position: 100px 560px;
+  }
+  .about__title {
+    font-size: 53px;
+    line-height: 57px;
+    margin-left: 160px;
+  }
+
+  .about__list {
+    margin-left: 160px;
+  }
 
 }
