--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -124,3 +124,61 @@
     margin-top: 20px;
   }
 }
+
+@media (min-width: 1200px) {
+  .featured {
+    padding: 0 100px;
+    padding-bottom: 200px;
+  }
+
+  .featured__title {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    //margin-left: 180px;
+    font-size: 53px;
+    line-height: 57px;
+    padding: 0 50px;
+    padding-top: 70px;
+    letter-spacing: -3px;
+    z-index: 1;
+  }
+
+  .featured__span-block {
+    margin-left: 30px;
+  }
+
+  .featured--order {
+    order: -1;
+  }
+
+  .featured__span {
+    margin-left: 0;
+  }
+
+  .featured__text {
+    margin-left: 160px;
+  }
+
+  .featured__table {
+    margin-left: 160px;
+  }
+
+  .featured__price {
+    width: 600px;
+    margin-top: 35px;
+    margin-bottom: 20px;
+  }
+
+  .featured__to-order {
+    margin-left: 160px;
+  }
+
+  .featured__basket-image {
+    width: 520px;
+    height: 635px;
+    top: 40px;
+    right: 100px;
+  }
+}
