--- a/source/sass/blocks/site-wrapper.scss
+++ b/source/sass/blocks/site-wrapper.scss
@@ -4,8 +4,15 @@
   margin: 0 auto;
   box-sizing: border-box;
 }
+
 @media (min-width: 768px) {
   .site-wrapper {
     width: 768px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .site-wrapper {
+    width: 1200px;
   }
 }
