Сверстал form.html для Десктопов

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -23,6 +23,7 @@
   color: #63d1bb;
   text-transform: uppercase;
   margin: 0;
+  margin-top: 70px;
 
   &::after {
     content: "";
@@ -223,7 +224,7 @@ input[type="radio"]:checked + .indicator {
     flex-direction: row;
 
     .form__label {
-      width: 150px;
+      width: 160px;
 
     }
   }
@@ -294,16 +295,16 @@ input[type="radio"]:checked + .indicator {
     display: flex;
     padding: 0 50px;
 
-    .form__input {
-      margin-top: 0;
-      padding-bottom: 0;
-      margin-left: 20px;
-    }
-
     .form__label {
       display: flex;
       flex-direction: row;
       align-items: center;
+    }
+
+    .form__input {
+      margin-top: 0;
+      padding-bottom: 0;
+      margin-left: 20px;
     }
   }
 
@@ -313,7 +314,7 @@ input[type="radio"]:checked + .indicator {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-left: 120px;
-
+    width: 100%;
   }
 
   .form__label-contact-wrapper {
@@ -359,7 +360,7 @@ input[type="radio"]:checked + .indicator {
   }
 
   .form__send {
-    padding: 0 50px;
+    margin: 0 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -371,5 +372,32 @@ input[type="radio"]:checked + .indicator {
       width: 250px;
     }
   }
+}
 
+@media (min-width: 1200px) {
+  .form {
+    padding: 0 100px;
+  }
+
+  .form__label-personal-wrapper {
+    width: 70%;
+  }
+
+  .form__label-contact-wrapper {
+    padding-right: 150px;
+  }
+
+  .form__textarea {
+    width: 630px;
+    margin-left: 130px;
+  }
+
+  .form__send {
+    padding: 0;
+    margin-left: 220px;
+    margin-right: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
