--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,7 @@
 .catalog {
   padding: 0 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 .catalog__item {
@@ -29,7 +31,6 @@
 
 .catalog__title {
   margin: 0;
-  margin-top: 30px;
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
@@ -56,42 +57,35 @@
   font-weight: bold;
 }
 
-.catalog__title-wrapper {
-  padding: 0 30px;
+.catalog__films {
+  margin-top: 40px;
+  border: 1px solid #000;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.catalog__movie-wrapper {
-  margin-top: 30px;
-  //position: relative;
-  border: 1px solid #ececec;
-}
-
-.catalog__movie--big-basket {
+.catalog__movies {
+  //margin-top: 30px;
   position: relative;
   width: 260px;
   height: 150px;
   background-image: url(../../img/video-mobile@1x.jpg);
+  background-repeat: no-repeat;
 }
 
-.catalog__movie .catalog__movie,
-.catalog__description-wrapper .catalog__description {
+.catalog__movies,
+.catalog__description {
   border: none;
 }
 
-.catalog__image-play {
+.catalog__movie-play {
   position: absolute;
   top: 25%;
   left: 33%;
-}
-
-.catalog__description-wrapper {
-  padding: 0 30px;
-}
-
-.catalog__to-order-wrapper {
-  text-align: center;
-  margin-top: 25px;
-  box-sizing: border-box;
+  width: 100px;
+  height: 76px;
+  background-image: url(../../img/icon-play.svg);
 }
 
 .catalog__to-order {
@@ -108,12 +102,23 @@
   text-align: center;
   padding: 14px 0;
 }
+.catalog__film-camera-icon {
+  width: 32px;
+  height: 22px;
+  background-image: url("../../img/icon-video.svg");
+  background-position: 0 -5px;
+}
 
 @media (min-width: 768px) {
   .catalog {
     margin-top: 40px ;
     padding: 0 50px;
   }
+
+  .catalog__films {
+    flex-direction: column;
+  }
+
 
   .catalog__item {
     display: flex;
@@ -122,6 +127,9 @@
   .catalog__image {
     width: 330px;
     height: 335px;
+  }
+  .catalog__films-description {
+    flex-direction: row;
   }
 
   .catalog__image--hare {
@@ -140,14 +148,41 @@
     position: bottom;
   }
 
-  .catalog__movie--big-basket {
+  .catalog__movies {
     width: 668px;
     min-height: 455px;
     background-image: url("../../img/video-tablet.jpg");
   }
 
-  .catalog__image-play {
+  .catalog__movie-play {
     top: 40%;
     left: 44%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .catalog {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .catalog__item {
+    flex-direction: column;
+  }
+
+  .catalog__films {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .catalog__films-description {
+    width: 365px;
+  }
+
+  .catalog__movies {
+    width: 680px;
+    min-height: 455px;
+    background-image: url("../../img/video-desktop.jpg");
   }
 }
