--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -2,7 +2,7 @@
   background-color: #fafafa;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 0;
+  background-position: 50% 440px;
 }
 
 .main-header__title {
@@ -13,10 +13,8 @@
   text-align: center;
   font-size: 27px;
   line-height: 30px;
-}
-
-.main-header__title-span {
-  display: block;
+  width: 310px;
+  margin: 0 auto;
 }
 
 .main-header__list {
@@ -55,8 +53,14 @@
 
 @media (min-width: 768px) {
   .main-header {
-    background-position: 95px -30px;
+    background-position: 95px 100px;
     padding: 0 50px;
+  }
+
+  .main-header__title {
+    width: 500px;
+    font-size: 43px;
+    line-height: 60px;
   }
 
   .main-header--display-block {
@@ -76,7 +80,7 @@
 
 @media (min-width: 1200px) {
   .main-header {
-    background-position: 0 -30px;
+    background-position: 0 100px;
     padding: 0 100px;
     background-image: url("../img/hero-desktop.jpg");
   }
@@ -86,6 +90,7 @@
     font-size: 53px;
     line-height: 57px;
     letter-spacing: -2px;
+    width: 600px;
   }
 
   .main-header__list {
