--- a/source/sass/blocks/top-menu.scss
+++ b/source/sass/blocks/top-menu.scss
@@ -25,9 +25,9 @@
   border-bottom: 1px solid #ececec;
 }
 
-.top-menu--sale,
-.top-menu--news,
-.top-menu--delivery {
+.sale--order,
+.news--order,
+.delivery--order {
   display: none;
 }
 
@@ -58,57 +58,57 @@
     padding: 20px;
   }
 
-  .top-menu--logo {
+  .logo--order {
     order: -3;
   }
 
-  .top-menu--find {
+  .find--order {
     order: -2;
   }
 
-  .top-menu--basket {
+  .basket--order {
     order: -1;
   }
 
-  .top-menu--display-block-m {
+  .display--block-m {
     display: block;
   }
 }
 
 @media (min-width: 1200px) {
-  .top-menu--logo {
+  .logo--order {
     order: 2;
   }
 
-  .top-menu--catalog {
+  .catalog--order {
     order: 0;
   }
 
-  .top-menu--knitting {
+  .knitting--order {
     order: 1;
   }
 
-  .top-menu--find {
+  .find--order {
     order: 3;
   }
 
-  .top-menu--basket {
+  .basket--order {
     order: 4;
   }
 
-  .top-menu--news {
+  .news--order {
     order: 5;
   }
 
-  .top-menu--sale {
+  .sale--order {
     order: 6;
   }
 
-  .top-menu--delivery {
+  .delivery--order {
     order: 7;
   }
 
-  .top-menu--display-block-l {
+  .display--block-l {
     display: block;
   }
 }
