--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,4 @@
 @import "../sass/blocks/catalog.scss";
 @import "../sass/blocks/form-header.scss";
 @import "../sass/blocks/form.scss";
+@import "../sass/blocks/map.scss";
