Исправил ошибки верстки

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -22,7 +22,7 @@
   background-image: url("../../img/photo-bowl-mobile@1x.jpg");
 }
 
-.catalog__item--big-basket {
+.big--basket {
   background-image: url("../../img/photo-toys-mobile@1x.jpg");
 }
 
@@ -142,7 +142,7 @@
     background-image: url("../../img/photo-2-tablet.jpg");
   }
 
-  .catalog__item--big-basket {
+  .big--basket {
     background-image: url("../../img/photo-3-tablet.jpg");
   }
 
