--- a/source/sass/blocks/top-menu.scss
+++ b/source/sass/blocks/top-menu.scss
@@ -44,7 +44,7 @@
     justify-content: space-between;
   }
 
-  .top-menu--font {
+  .font--view {
     font-size: 15px;
     line-height: 24px;
     font-weight: normal;
