--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -16,7 +16,7 @@
   border-bottom: 1px solid #e5e5e5;
 }
 
-.main-footer__item-link {
+.main-footer__link {
   text-decoration: none;
   display: inline-block;
   padding: 20px;
@@ -43,7 +43,7 @@
   vertical-align: middle;
 }
 
-.main-footer__item--display {
+.main-footer__logo--display {
   display: none;
 }
 
@@ -58,7 +58,7 @@
     justify-content: space-between;
   }
 
-  .main-footer__item--display {
+  .main-footer__logo--display {
     display: block;
   }
 }
