Переделал структуру избавился от неудачных селекторов

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,119 +1,11 @@
-.main-header {
-  background-color: #fafafa;
-  background-repeat: no-repeat;
-  background-position: 50% 440px;
-}
-
-.header--background {
-  background-image: url("../img/hero-mobile@1x.jpg");
-}
-
-.main-header__title {
-  padding-top: 85px;
-  padding-bottom: 125px;
-  text-align: center;
-  font-size: 27px;
-  line-height: 30px;
-  width: 310px;
-  margin: 0 auto;
-}
-
-.main-header__list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.main-header__item {
-  background-color: #63d1bb;
-  background-image: url("../img/icon-interior.svg");
-  background-repeat: no-repeat;
-  background-position: 230px 20px;
-}
-
-.main-header__item:nth-child(2) {
-  background-color: #56c3b2;
-  background-image: url("../img/icon-toy.svg");
-  background-repeat: no-repeat;
-  background-position: 220px 20px;
-}
-
-.main-header__link {
-  color: #ffffff;
-  font-size: 19px;
-  line-height: 24px;
-  font-weight: bold;
-  text-decoration: none;
-  display: inline-block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 28px 0;
-  padding-left: 30px;
-  padding-right: 130px;
-}
-
 @media (min-width: 768px) {
-  .header--background {
-    background-image: url("../img/hero-desktop.jpg");
-  }
-
   .main-header {
-    background-position: -200px 100px;
-  }
-
-  .main-header__title {
-    width: 500px;
-    font-size: 43px;
-    line-height: 60px;
-  }
-
-  .main-header--display-block {
-    display: inline-block;
-  }
-
-  .main-header__list {
-    margin-top: 15px;
-    display: flex;
-    flex-direction: row;
-  }
-
-  .main-header__item {
-    width: 333px;
+    padding: 0 50px;
   }
 }
 
 @media (min-width: 1200px) {
   .main-header {
-    background-position: 0 100px;
     padding: 0 100px;
-  }
-
-  .main-header__title {
-    padding-top: 120px;
-    font-size: 53px;
-    line-height: 57px;
-    letter-spacing: -2px;
-    width: 600px;
-  }
-
-  .main-header__list {
-    margin-top: 240px;
-  }
-
-  .main-header__item {
-    width: 550px;
-    background-position: 460px 20px;
-  }
-
-  .main-header__item:nth-child(2) {
-    background-position: 440px 20px;
-  }
-
-  .main-header__link {
-    padding-right: 290px;
-    padding-left: 40px;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0;
   }
 }
