--- a/source/sass/blocks/catalog-title.scss
+++ b/source/sass/blocks/catalog-title.scss
@@ -1,4 +1,4 @@
-.catalog-header__title {
+.catalog-title {
   margin: 0;
   padding: 70px 0;
   text-align: center;
@@ -9,7 +9,7 @@
 }
 
 @media (min-width: 768px) {
-  .catalog-header__title {
+  .catalog-title {
     font-size: 43px;
     line-height: 50px;
     padding: 50px 0;
