--- a/source/sass/blocks/form-title.scss
+++ b/source/sass/blocks/form-title.scss
@@ -1,4 +1,4 @@
-.form-header__title {
+.form-title {
   background-color: #f1f1f1;
   font-size: 27px;
   line-height: 30px;
@@ -9,7 +9,7 @@
 }
 
 @media (min-width: 768px) {
-  .form-header__title {
+  .form-title {
     margin: 0;
     padding: 50px 0;
     font-size: 43px;
