Ошибки Тревиса попарвил

--- a/source/sass/blocks/site-choice.scss
+++ b/source/sass/blocks/site-choice.scss
@@ -2,7 +2,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  background-color: #fafafa;;
+  background-color: #fafafa;
 }
 
 .site-choice__interior {
@@ -46,7 +46,6 @@
 }
 
 @media (min-width: 1200px) {
-
   .site-choice {
     padding: 0 60px;
   }
